# cppcmakeexample

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/add/: CMakeLists.txt  add.cpp
src/add/include/: add.h
src/multiply/: multiply.cpp
tests/: CMakeLists.txt  add_test.cpp  multiply_test.cpp
